fix/navbar: resolve z-index overlap issue

--- a/src/components/More/Gallery/animatedImage.module.css
+++ b/src/components/More/Gallery/animatedImage.module.css
@@ -1,6 +1,6 @@
 .activeImage {
   position: fixed;
-  z-index: 20;
+  z-index: 36;
   overflow: hidden;
   display: flex;
   justify-content: center;
@@ -34,7 +34,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 50;
+  z-index: 40;
   overflow-y: auto;
 }
 
