--- a/src/components/More/Gallery/galleryCard.module.css
+++ b/src/components/More/Gallery/galleryCard.module.css
@@ -30,7 +30,7 @@
   flex-direction: column;
   opacity: 0;
   transition: opacity 0.3s;
-  z-index: 50;
+  z-index: 40;
   padding: 2px;
   gap: 1rem;
 }
